assets/styles/style.css
/* ... */
  :root{
    --deep-blue: #111433;
    --near-white: #f9f9f9;
    --less-white: #f2f5fb;
    --easy-blue: #5e6cfd;
    --black: #000;
    --nav-shadow: #32325d40;
    --mist-purple: #f9f9f9;
    --deep-blue2: #111433;
    --deep-blue3: #111433;
    --scroll: #828282;
    --button-bg: #5e6cfd;
    --button-tx: #fff;
    --track: #f9f9f9;
  }

body { 
  margin: 0;
  font-family: 'Krona One', sans-serif;
  color: var(--deep-blue);
  background-color: var(--near-white);
  letter-spacing: 1px;
}

ul{
  display: flex;
  align-items: center;
  gap: 1rem;
  list-style: none;
  padding: 0rem;
}

h1{
  margin: 0;
  font-family: 'Krona One', sans-serif;
}

label{
  position: absolute;
  bottom: 8rem;
  left: 50%;
  transform: translateX(-50%);
  text-wrap: nowrap !important;
  text-align: center;
}

.loading{
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #222;
  z-index: 9999999;
}

.loader {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    max-width: 6rem;
    margin-top: 3rem;
    margin-bottom: 3rem;
  }
  .loader:before,
  .loader:after {
    content: "";
    position: absolute;
    border-radius: 50%;
    animation: pulsOut 1.8s ease-in-out infinite;
    filter: drop-shadow(0 0 1rem rgba(255, 255, 255, 0.75));
  }
  .loader:before {
    width: 100%;
    padding-bottom: 100%;
    box-shadow: inset 0 0 0 1rem #fff;
    animation-name: pulsIn;
  }
  .loader:after {
    width: calc(100% - 2rem);
    padding-bottom: calc(100% - 2rem);
    box-shadow: 0 0 0 0 #fff;
  }

  .wFill{
    fill: #fff !important;
  }

  .wFillStroke{
    stroke: #fff !important;
    fill: none;
  }

  .wFillDeep{
    fill: var(--deep-blue3) !important;
  }

  @keyframes pulsIn {
    0% {
      box-shadow: inset 0 0 0 1rem #fff;
      opacity: 1;
    }
    50%, 100% {
      box-shadow: inset 0 0 0 0 #fff;
      opacity: 0;
    }
  }

  @keyframes pulsOut {
    0%, 50% {
      box-shadow: 0 0 0 0 #fff;
      opacity: 0;
    }
    100% {
      box-shadow: 0 0 0 1rem #fff;
      opacity: 1;
    }
  }
      
.none{
  opacity: 0;
  animation: loader .5s forwards;
}

@keyframes loader {
  0% {
    opacity: 1;
  }
  99%{
    width: 100%;
    height: 100%;
  }
  100% {
    opacity: 0;
    width: 0%;
    height: 0%;
  }
  
}

.firstBanner{
  background: var(--easy-blue);
  min-height: 65vh;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 90px;
}

.nav {
  position: fixed;
  background-color: var(--easy-blue);
  z-index: 9999998;
  display: flex;
  align-items: center;
  width: 100%;
  height: 90px;
  top: 0;
  box-shadow: var(--nav-shadow) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

.nav-container{
  max-width: 1200px;
  width: 100%;
  display: flex;
  justify-content: space-between; 
  align-items: center;
  margin: 0 auto;
}

.nav-container > h1 > a{
  color: var(--less-white);
  margin-left: 1rem;
  font-family: Poppins,sans-serif;
  height: fit-content;
  text-decoration: none;
}

.nav-container > ul{
  margin-right: 1rem;
}

.nav-container > ul > li > a {
  color: var(--less-white);
  text-decoration: none;
  margin-left: 1rem;
  transition: all 0.3s ease-in-out;
}

.nav-container > ul > li > a:hover{
  color: var(--deep-blue);
  transition: all 0.3s ease-in-out;
}

.mobile-nav-container{
  display: flex;
  justify-content: space-between; 
  align-items: center;
  position: relative;
  width: 100%;
  margin: 0 auto;
}

.mobile-nav-container > h1 > a{
  color: var(--less-white);
  margin-left: 1rem;
  font-family: Poppins,sans-serif;
  height: fit-content;
  text-decoration: none;
}

.mobile-ul{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: fixed;
  height: 100vh;
  transform: translateY(-16px);
  width: 100%;
  top: 0;
  left: -100% !important;
  z-index: 999999999999999999;
  background-color: var(--near-white);
  transition: all 0.4s ease-in-out;
  gap: 5rem;
}

.mobile-ul > li > a{
  color: var(--deep-blue);
  text-decoration: none;
  font-size: 20px;
  font-weight: 900;
  transition: all 0.4s ease-in-out;
  font-size: 25px;
}

.mobile-hidden{
  left: 0 !important;
  transition: all 0.4s ease-in-out;
}

.close{
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 2rem;
  cursor: pointer;
}



.headings{
  width: 600px;
  height: 100%;
  position: relative;
  margin-top: 5rem;
  margin-left: 12rem;
}


.intro{
  position: absolute;
  top: -30px;
  left: -215px;
}

.intro > *{
  text-align: left;
}

.intro > h2{
  letter-spacing: 3px;
}

.intro > h1{
  font-size: 40px;
  letter-spacing: 4px;
  position: absolute;
  white-space: nowrap;
  left: -3px;
  z-index: 2;
}

.tech-stack{
  display: flex;
  gap: 2rem;
  margin: 5rem 0 5rem 0;
}

.tech-stack div{
  display: flex;
  gap: 2rem;
}

.tech-stack p{
  letter-spacing: 1px;
  font-size: 20px;
}

.tech-stack img{
  transition: all 0.3s ease-in-out;
}

.tech-stack img:hover{
  transform: translateY(-10px);
  transition: all 0.3s ease-in-out;
}

.top-left{
  position: absolute;
  left: -65%;
  top: -55px;
  width: 90px;
  z-index: 20;
}

.crypto-verse{
  animation: bobbing3 3s infinite;
  width: 90px;
}

.svg0{
  transform: rotate(-20deg) !important;
}

.svg2 {
  transform: rotate(-40deg) !important;
}


.Nighthawk{
  animation: bobbing2 3s infinite;
}

.Cross-City {
  width: 90px;
  animation: bobbing1 3s infinite;
}

.Nexus {
  width: 90px;
  animation: bobbing3 3s infinite;
}

.svg5 {
  transform: rotate(-20deg) !important;
}

.top-right{
  position: absolute;
  right: -65%;
  top: -55px;
  width: 90px;
  z-index: 20;
}

.divider{
  width: 90%;
  height: 6px;
  background-color: var(--deep-blue);
  position: absolute;
  border-radius: 5px;
  top: 50%;
}

.intro > p{
  margin-top: 10rem;
  max-width: 300px;
}
/* ... */

